fix: feature collection grid gap

--- a/frontend/src/app/(pages)/home/featured-collection/featured-collection.module.scss
+++ b/frontend/src/app/(pages)/home/featured-collection/featured-collection.module.scss
@@ -18,7 +18,7 @@
   &__grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 1px;
+    gap: 20px;
   }
   &__tabs {
     display: flex;
